# asterinas

./: Cargo.toml  Components.toml  Makefile  OSDK.toml  plan.md
.github/workflows/: kernel_test.yml  test_asterinas.yml  test_osdk.yml
book/src/kernel/linux-compatibility/: kernel-parameters.md
framework/aster-frame/: Cargo.toml
framework/aster-frame/src/: lib.rs
framework/aster-frame/src/trap/: handler.rs  mod.rs
framework/aster-frame/src/vm/: frame.rs  mod.rs  page_table.rs
kernel/: Cargo.toml
kernel/comps/dm/: Cargo.toml
kernel/comps/dm/src/: cmdline.rs  device.rs  lib.rs  prelude.rs  registry.rs  table.rs  target.rs
kernel/comps/virtio/: Cargo.toml
kernel/src/: init.rs  lib.rs
kernel/src/device/misc/: tdxguest.rs
kernel/src/fs/: boot_root.rs  mod.rs
kernel/src/process/process/: init_proc.rs
kernel/src/time/: mod.rs
ostd/libs/linux-bzimage/setup/: Cargo.toml
ostd/src/: lib.rs
ostd/src/mm/frame/: allocator.rs  unaccepted.rs
runner/src/: main.rs
services/aster-nix/: Cargo.toml
services/aster-nix/src/: lib.rs
services/aster-nix/src/device/: mod.rs
services/aster-nix/src/net/: mod.rs
services/aster-nix/src/syscall/: open.rs
services/comps/console/src/: lib.rs
services/comps/input/src/: lib.rs
test/benchmark/: bench_linux_and_aster.sh
test/benchmark/common/: bench_runner.sh  prepare_host.sh
test/initramfs/nix/: initramfs.nix
test/initramfs/src/: boot_dm_verity.sh
test/src/benchmark/: bench_linux_and_aster.sh
tools/: generate_verity_root_boot_sample.sh  generate_verity_test_vector.sh
(+39 files in other folders)
