# SPDX-License-Identifier: MPL-2.0

[package]
name = "aster-dm"
version = "0.1.0"
edition.workspace = true

[dependencies]
aster-block.workspace = true
aster-cmdline.workspace = true
sha2.workspace = true
component.workspace = true
device-id.workspace = true
ostd.workspace = true
spin.workspace = true

[lints]
workspace = true
